@@ -1,2 +1,3 @@
 [B]Version 1.1.76[/B]
 Freeomovie Category directory fix
+Hanime.tv - Also play the mp4 videos (needs a free member account)
